force-app/main/default/objects/Receipt__c/fields/ContainsadjustedOpp__c.field-meta.xml
<CustomField>
    <fullName>ContainsadjustedOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the receipt includes adjusted opportunity records.</description>
    <inlineHelpText>Indicates whether the receipt includes adjusted opportunity records.</inlineHelpText>
    <label>HAM_contains_adjusted_opportunity</label>
    <type>Checkbox</type>
</CustomField>