force-app/main/default/objects/Receipt__c/fields/HAM_City__c.field-meta.xml
<CustomField>
    <fullName>HAM_City__c</fullName>
    <description>Stores the city or municipality associated with the mailing address.</description>
    <inlineHelpText>Enter the full city name as recognized by postal standards. Do not abbreviate unless officially part of the city’s name.</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>