force-app/main/default/objects/Receipt__c/fields/HAM_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the constituent associated with this receipt.</description>
    <inlineHelpText>Select the constituent to whom this receipt applies. This lookup determines the recipient and is used for receipt generation, delivery, and reporting.</inlineHelpText>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>