force-app/main/default/objects/Receipt__c/fields/HAM_Country__c.field-meta.xml
<CustomField>
    <fullName>HAM_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>