force-app/main/default/objects/Receipt__c/fields/HAM_Credit_Line_Ids__c.field-meta.xml
<CustomField>
    <fullName>HAM_Credit_Line_Ids__c</fullName>
    <description>Stores a comma-separated list of Credit Line record IDs associated with this record.</description>
    <inlineHelpText>Contains all related Credit Line record IDs separated by commas. This field is typically system-populated and used for processing, reconciliation, or integration purposes. Do not edit manually unless instructed.</inlineHelpText>
    <label>HAM Credit Line Ids</label>
    <type>TextArea</type>
</CustomField>