force-app/main/default/objects/Receipt__c/fields/HAM_Designation_Text__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation_Text__c</fullName>
    <description>Stores formatted designation details for inclusion in receipt documentation.</description>
    <inlineHelpText>Contains designation information that will appear on the receipt or acknowledgment letter.</inlineHelpText>
    <label>HAM Designation Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>