force-app/main/default/objects/Receipt__c/fields/HAM_Email_of_PRM__c.field-meta.xml
<CustomField>
    <fullName>HAM_Email_of_PRM__c</fullName>
    <description>A field that stores Email of PRM for Signature block.</description>
    <inlineHelpText>A field that stores Email of PRM for Signature block.</inlineHelpText>
    <label>Email of PRM</label>
    <type>Email</type>
</CustomField>