force-app/main/default/objects/Receipt__c/fields/HAM_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the receipt has completed processing.</description>
    <inlineHelpText>Checked when the receipt has been fully generated by formstack, finalized, and processed by the gift processing team.</inlineHelpText>
    <label>HAM Is Processed</label>
    <type>Checkbox</type>
</CustomField>