force-app/main/default/objects/Receipt__c/fields/HAM_is_stock_receipt__c.field-meta.xml
<CustomField>
    <fullName>HAM_is_stock_receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this receipt includes a stock gift.</description>
    <inlineHelpText>Checked automatically when the receipt contains stock-related transactions.</inlineHelpText>
    <label>HAM is stock receipt</label>
    <type>Checkbox</type>
</CustomField>