force-app/main/default/objects/Receipt__c/fields/HAM_is_tribute_receipt__c.field-meta.xml
<CustomField>
    <fullName>HAM_is_tribute_receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this receipt includes tribute information.</description>
    <inlineHelpText>Indicates whether this receipt includes tribute information.</inlineHelpText>
    <label>HAM is tribute receipt</label>
    <type>Checkbox</type>
</CustomField>