force-app/main/default/objects/Receipt__c/fields/HAM_Job_title__c.field-meta.xml
<CustomField>
    <fullName>HAM_Job_title__c</fullName>
    <description>This field stores Job title of PRM which will be used in Signature block.</description>
    <inlineHelpText>This field stores Job title of PRM which will be used in Signature block.</inlineHelpText>
    <label>Job title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>