force-app/main/default/objects/Receipt__c/fields/HAM_Letter_Addressee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Letter_Addressee__c</fullName>
    <description>Stores the name of the individual or entity to whom correspondence is addressed.</description>
    <inlineHelpText>Enter the full addressee name exactly as it should appear on the letter or receipt (e.g., “Dr. John A. Smith” or “The Smith Family Foundation”). This value is used in document and envelope generation.</inlineHelpText>
    <label>HAM Letter Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>