force-app/main/default/objects/Receipt__c/fields/HAM_Letter_Salutation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Letter_Salutation__c</fullName>
    <description>Stores the salutation to be used in correspondence related to this record.</description>
    <inlineHelpText>Enter the greeting that should appear at the beginning of letters or receipts (e.g., “Dear John,” or “Dear Mr. and Mrs. Smith,”). This value will be used during document generation.</inlineHelpText>
    <label>HAM Letter Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>