force-app/main/default/objects/Receipt__c/fields/HAM_Organization__c.field-meta.xml
<CustomField>
    <fullName>HAM_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the organization associated with this record.</description>
    <inlineHelpText>Select the Account representing the organization related to this receipt or transaction. Use this field when the gift or receipt is associated with an organization rather than an individual constituent.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>