force-app/main/default/objects/Receipt__c/fields/HAM_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_Phone__c</fullName>
    <description>This field stores Phone number of PRM which will be used in Signature block.</description>
    <inlineHelpText>This field stores Phone number of PRM which will be used in Signature block.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>