force-app/main/default/objects/Receipt__c/fields/HAM_Primary_Constituent_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Primary_Constituent_Type__c</fullName>
    <description>Identifies the classification of the primary constituent associated with the receipt.</description>
    <inlineHelpText>Stores the primary constituent type (e.g., Individual, Organization) for reporting and processing purposes.</inlineHelpText>
    <label>HAM_Primary_Constituent_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>