force-app/main/default/objects/Receipt__c/fields/HAM_Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Receipt_Type__c</fullName>
    <description>Specifies how receipts are generated and delivered for this transaction or constituent.</description>
    <inlineHelpText>Select the preferred receipt format:

Single Entry – One receipt per transaction
Merged Multiple – One receipt covering multiple transactions
Annual Tax Summary – One consolidated receipt for the calendar year</inlineHelpText>
    <label>HAM Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Tax Summary</fullName>
            </value>
            <value>
                <fullName>Hard Credit</fullName>
            </value>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>Pledge Reminder</fullName>
            </value>
            <value>
                <fullName>Annual Tax</fullName>
                <isActive>false</isActive>
                <label>Annual Tax</label>
            </value>
            <value>
                <fullName>Merged Multiple</fullName>
                <isActive>false</isActive>
                <label>Merged Multiple</label>
            </value>
            <value>
                <fullName>Single Entry</fullName>
                <isActive>false</isActive>
                <label>Single Entry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>