force-app/main/default/objects/Receipt__c/fields/HAM_State__c.field-meta.xml
<CustomField>
    <fullName>HAM_State__c</fullName>
    <label>State</label>
    <type>TextArea</type>
</CustomField>