force-app/main/default/objects/Receipt__c/fields/HAM_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Status__c</fullName>
    <description>Indicates the current lifecycle status of the receipt.</description>
    <inlineHelpText>Reflects the current state of the receipt:

Draft – Created but not finalized
Generated – Finalized and ready for delivery
Sent – Delivered to the recipient</inlineHelpText>
    <label>HAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>