force-app/main/default/objects/Receipt__c/fields/HAM_Stock_Text__c.field-meta.xml
<CustomField>
    <fullName>HAM_Stock_Text__c</fullName>
    <description>Stores descriptive information related to stock gifts included in the receipt.</description>
    <inlineHelpText>Enter or review stock gift details that should appear on the receipt, if applicable.</inlineHelpText>
    <label>HAM Stock Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>