force-app/main/default/objects/Receipt__c/fields/HAM_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>HAM_Street_Address__c</fullName>
    <description>Stores the street-level portion of the mailing address for this record.</description>
    <inlineHelpText>Enter the street address, including building number, street name, and apartment or suite information (if applicable). This value is used for mailing and document delivery.</inlineHelpText>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>