force-app/main/default/objects/Receipt__c/fields/HAM_Sum_of_Cash_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sum_of_Cash_Amount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Represents the total cash amount included in this receipt.</description>
    <inlineHelpText>Represents the total cash amount included in this receipt.</inlineHelpText>
    <label>HAM Sum of Cash Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>