force-app/main/default/objects/Receipt__c/fields/HAM_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Amount__c</fullName>
    <description>Represents the total monetary amount associated with this record.</description>
    <inlineHelpText>Automatically calculated as the sum of related Line Item amounts when Line Items are configured as a Master-Detail relationship. Otherwise, this value is calculated based on applicable business logic.</inlineHelpText>
    <label>HAM Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>