force-app/main/default/objects/Receipt__c/fields/HAM_Total_Pledge_Balance__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Pledge_Balance__c</fullName>
    <label>Total Pledge Balance</label>
    <summarizedField>HAM_Receipt_Line_Item__c.Remaining_Amount_due__c</summarizedField>
    <summaryForeignKey>HAM_Receipt_Line_Item__c.HAM_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>