force-app/main/default/objects/Receipt__c/fields/HAM_Total_Pledge_Paid__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Pledge_Paid__c</fullName>
    <label>Total Pledge Paid</label>
    <summarizedField>HAM_Receipt_Line_Item__c.HAM_Amount_Paid_to_Date__c</summarizedField>
    <summaryForeignKey>HAM_Receipt_Line_Item__c.HAM_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>