force-app/main/default/objects/Receipt__c/fields/HAM_Tribute_Text__c.field-meta.xml
<CustomField>
    <fullName>HAM_Tribute_Text__c</fullName>
    <description>Stores tribute-related information for acknowledgment purposes.</description>
    <inlineHelpText>Stores tribute-related information for acknowledgment purposes.</inlineHelpText>
    <label>HAM Tribute Text</label>
    <type>TextArea</type>
</CustomField>