force-app/main/default/objects/Receipt__c/fields/HAM_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>HAM_ZipCode__c</fullName>
    <description>Stores the postal code associated with the mailing address.</description>
    <inlineHelpText>Enter the ZIP or postal code for the address. For U.S. addresses, use either the 5-digit ZIP (e.g., 13057) or ZIP+4 format (e.g., 13057-1234).</inlineHelpText>
    <label>ZipCode</label>
    <length>11</length>
    <type>Text</type>
</CustomField>