force-app/main/default/objects/Receipt__c/fields/PRM_ID__c.field-meta.xml
<CustomField>
    <fullName>PRM_ID__c</fullName>
    <description>This field stores PRM ID which will be used in Signature block.</description>
    <inlineHelpText>This field stores PRM ID which will be used in Signature block.</inlineHelpText>
    <label>PRM ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>