force-app/main/default/objects/Receipt__c/fields/PRM_Name__c.field-meta.xml
<CustomField>
    <fullName>PRM_Name__c</fullName>
    <description>This field Stores Name of PRM which will be used in Signature block.</description>
    <inlineHelpText>This field Stores Name of PRM which will be used in Signature block.</inlineHelpText>
    <label>PRM Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>