force-app/main/default/objects/Receipt__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <description>Specifies the official date of the receipt.</description>
    <inlineHelpText>Enter or review the date the receipt was issued. This date is used for reporting and document generation.</inlineHelpText>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>