force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HAM_Constituent__c</columns>
    <columns>HAM_Credit_Line_Ids__c</columns>
    <columns>HAM_Designation_Text__c</columns>
    <columns>HAM_Is_Processed__c</columns>
    <columns>HAM_Receipt_Type__c</columns>
    <columns>HAM_Total_Amount__c</columns>
    <columns>Receipt_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>