force-app/main/default/objects/Receipt__c/listViews/Pledge_payment.listView-meta.xml
<ListView>
    <fullName>Pledge_payment</fullName>
    <columns>NAME</columns>
    <columns>HAM_Constituent__c</columns>
    <columns>HAM_Is_Processed__c</columns>
    <columns>Receipt_Date__c</columns>
    <columns>PRM_Name__c</columns>
    <columns>HAM_Credit_Line_Ids__c</columns>
    <columns>HAM_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Receipt_Type__c</field>
        <operation>equals</operation>
        <value>Pledge Reminder</value>
    </filters>
    <filters>
        <field>PRM_Name__c</field>
        <operation>contains</operation>
        <value>ross</value>
    </filters>
    <label>Pledge Reminder</label>
</ListView>