force-app/main/default/objects/Receipt__c/listViews/Soft_Credit.listView-meta.xml
<ListView>
    <fullName>Soft_Credit</fullName>
    <columns>NAME</columns>
    <columns>HAM_Constituent__c</columns>
    <columns>HAM_Credit_Line_Ids__c</columns>
    <columns>HAM_Designation_Text__c</columns>
    <columns>HAM_Is_Processed__c</columns>
    <columns>HAM_Receipt_Type__c</columns>
    <columns>HAM_Total_Amount__c</columns>
    <columns>Receipt_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Receipt_Type__c</field>
        <operation>equals</operation>
        <value>Soft Credit</value>
    </filters>
    <label>Soft Credit</label>
</ListView>